# pythonvideo

./: .dockerignore  .env.example  .gitignore  Dockerfile  _dl_nocookie.py  alembic.ini  cookies.txt  database.py  docker-compose.yml  jwt_create.py  main.py  pyproject.toml  pyrightconfig.json  接口文档说明.md  数据表.json
controllers/: admin.py  anime.py  chat.py  commission.py  database.py  pcRouter.py  test.py  test1.py  user.py  video.py  vip.py  wecom.py  weixinpay.py  withdrawal.py
core/: certKey.py  databaseApi.py  douyin_service.py  middleware.py  response.py  video_service.py  video_text.py  wepay.py  xhs_service.py
down-test/: download_video.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_anime_subscriptions.py  003_anime_resource_tables.py
models/: __init__.py  anime_resource.py  base.py  chat.py  commission.py  config.py  order.py  user.py  user_subscription.py  withdrawal.py
nginx/: default.conf
schemas/: user.py
scripts/: init-cert.sh  renew-ssl.sh
services/: __init__.py  chat_service.py  commission_service.py  config_service.py  payment_service.py  sync_service.py  user_service.py  withdrawal_service.py
